--- a/formgram-cg.tex
+++ b/formgram-cg.tex
@@ -50,12 +50,12 @@
 
 \outline{
 \begin{itemize}
-\item general remarks on the representational format
-\item verb position
-\item local reordering (aka scrambling)
-\item passive
-\item long distance dependencies
-\item summary and classification
+\item General remarks on the representational format
+\item Verb position
+\item Local reordering (aka scrambling)
+\item Passive
+\item Long distance dependencies
+\item Summary and classification
 \end{itemize}
 
 }
@@ -260,12 +260,12 @@ np/\gruen<3>{n} & n/\gruen<2>{n}   & \gruen<2>{n}   & (s\bs np)/\gruen<4>{np} & 
 
 \outline{
 \begin{itemize}
-\item general remarks on the representational format
-\item \alert{verb position}
-\item local reordering (aka scrambling)
-\item passive
-\item long distance dependencies
-\item summary and classification
+\item General remarks on the representational format
+\item \alert{Verb position}
+\item Local reordering (aka scrambling)
+\item Passive
+\item Long distance dependencies
+\item Summary and classification
 \end{itemize}
 
 }
@@ -350,12 +350,12 @@ taking the arguments of the verb and the verb in initial position as arguments.
 
 \outline{
 \begin{itemize}
-\item general remarks on the representational format
-\item verb position
-\item \alert{local reordering (aka scrambling)}
-\item passive
-\item long distance dependencies
-\item summary and classification
+\item General remarks on the representational format
+\item Verb position
+\item \alert{Local reordering (aka scrambling)}
+\item Passive
+\item Long distance dependencies
+\item Summary and classification
 \end{itemize}
 
 }
@@ -401,12 +401,12 @@ Elements in brackets can be combined with s in any order.
 
 \outline{
 \begin{itemize}
-\item general remarks on the representational format
-\item verb position
-\item local reordering (aka scrambling)
-\item \alert{passive}
-\item long distance dependencies
-\item summary and classification
+\item General remarks on the representational format
+\item Verb position
+\item Local reordering (aka scrambling)
+\item \alert{Passive}
+\item Long distance dependencies
+\item Summary and classification
 \end{itemize}
 
 }
@@ -488,12 +488,12 @@ np   & (s\bs np)/\mathit{PstP} & \mathit{PstP}/np_{by} & np_{by}/np & np\\
 
 \outline{
 \begin{itemize}
-\item general remarks on the representational format
-\item verb position
-\item local reordering (aka scrambling)
-\item passive
-\item \alert{long distance dependencies}
-\item summary and classification
+\item General remarks on the representational format
+\item Verb position
+\item Local reordering (aka scrambling)
+\item Passive
+\item \alert{Long distance dependencies}
+\item Summary and classification
 \end{itemize}
 
 }
@@ -783,12 +783,12 @@ Fido                 & we            & put        & downstairs\\
 
 \outline{
 \begin{itemize}
-\item general remarks on the representational format
-\item verb position
-\item local reordering (aka scrambling)
-\item passive
-\item long distance dependencies
-\item \alert{summary and classification}
+\item General remarks on the representational format
+\item Verb position
+\item Local reordering (aka scrambling)
+\item Passive
+\item Long distance dependencies
+\item \alert{Summary and classification}
 \end{itemize}
 
 }
