--- a/formgram-gb.tex
+++ b/formgram-gb.tex
@@ -1092,6 +1092,11 @@ Clause c) makes sure that heads can assign neither case nor theta role to parts 
 
 c) restricts government in depth.
 \nocite{Chomsky86b,Sternefeld91a-u}
+
+\pause
+Elements inside of NPs and PPs bearing case must get it inside of the NP or PP not from outside.
+
+
 }
 
 \frame{
