--- a/formgram-include.tex
+++ b/formgram-include.tex
@@ -107,11 +107,11 @@ St.Mueller@hu-berlin.de}
 \include{formgram-feature-descriptions}
 \include{formgram-lfg}
 \include{formgram-cg}
-% \include{formgram-hpsg}
+%\include{formgram-hpsg}
 
 % \include{formgram-cxg}
 % %\include{formgram-cxg-phrasal}
-% \include{formgram-tag}
+\include{formgram-tag}
 % \include{formgram-minimalism}
 % %\include{formgram-psycho}
 % \include{formgram-zusammenfassung}
