--- a/formgram-gb3.tex
+++ b/formgram-gb3.tex
@@ -78,7 +78,7 @@ The case of the subject (and the object) is determined by the principle.
 }
 
 \frame{
-\frametitle{Structural: The object}
+\frametitle{Structural case: The object}
 
 \begin{itemize}
 \item Object (accusative in the active) can be realized as nominative and genitive:
@@ -88,10 +88,12 @@ The case of the subject (and the object) is determined by the principle.
 \gll Judit schlägt \alert{den} \alert{Weltmeister}.\\
      Judit beats the.\ACC{} world.champion\\
 \glt `Judit beats the world champion.'
+\pause
 \ex 
 \gll \alert{Der} \alert{Weltmeister} wird geschlagen.\\
      the.\NOM{} world.champion is beaten\\
 \glt `The world champion is being beaten.'
+\pause
 \ex 
 \gll  das Schlagen \alert{des} \alert{Weltmeisters}\\
       the beating  of.the world.champion\\
