--- a/formgram-include.tex
+++ b/formgram-include.tex
@@ -48,6 +48,10 @@
 
 \newcommand\mathdash{\text{\normalfont -}}
 
+% for offsets in trees
+\newlength{\offset}
+\newlength{\offsetup}
+
 %\usepackage{soul}
 
 
@@ -107,7 +111,7 @@ St.Mueller@hu-berlin.de}
 \include{formgram-feature-descriptions}
 \include{formgram-lfg}
 \include{formgram-cg}
-%\include{formgram-hpsg}
+\include{formgram-hpsg}
 
 % \include{formgram-cxg}
 % %\include{formgram-cxg-phrasal}
